# InventoryTracker

./: .replit  generate_docs.py  index.html  init_db.py  main.py  project_documentation.md  pyproject.toml  replit.nix  streamlit.md  streamlit_app.py
.streamlit/: config.toml
attached_assets/: Pasted-Project-Inventory-Management-System-Project-Description-Develop-a-simple-inventory-management-syst-1736414290474.txt
docs/assets/: asset_manifest.json
inventory/: __init__.py  api_client.py  database.py  documentation_generator.py  export_manager.py  inventory_manager.py  product.py  user.py  user_manager.py
styles/: styles.css
tests/: __init__.py  test_inventory_manager.py
