[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "graphviz>=0.20.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "selenium>=4.27.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
]
